src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Avatar_Url__c</fullName>
        <description>The URL to the user&apos;s avatar image.</description>
        <label>Avatar Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Can_Create_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user can create invoices. Only applicable to project managers.</description>
        <label>Can Create Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Create_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user can create projects. Only applicable to project managers.</description>
        <label>Can Create Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_See_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user can see billable rates on projects. Only applicable to project managers.</description>
        <label>Can See Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <description>The cost rate to use for this user when calculating a project&apos;s costs vs billable amount.</description>
        <label>Cost Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Hourly_Rate__c</fullName>
        <description>The billable rate to use for this user when they are added to a project.</description>
        <label>Default Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Harvest_Id__c</fullName>
        <description>Will be retrieved and saved here by Harvest API code in the future - no need to set. marking as external id so we can search on it</description>
        <externalId>true</externalId>
        <label>Harvest Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Access_To_All_Future_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user should be automatically added to future projects.</description>
        <label>Has Access To All Future Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user has admin permissions.</description>
        <label>Is Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user is a contractor or an employee.</description>
        <label>Is Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the user has project manager permissions.</description>
        <label>Is Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>The role names assigned to this person.</description>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Founder</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekly_Capacity__c</fullName>
        <description>The number of hours per week this person is available to work in seconds. For example, if a person&apos;s capacity is 35 hours, the API will return 126000 seconds.</description>
        <inlineHelpText>In Seconds</inlineHelpText>
        <label>Weekly Capacity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Require_First_Name</fullName>
        <active>true</active>
        <description>Harvest API requires it for User records</description>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>First Name is required.</errorMessage>
    </validationRules>
</CustomObject>